# oncotwin

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  assets.js  docker-compose.yml  index.html  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml
analysis/: REAL_RESULTS.md  RESULTS.md  real_data_analysis.py  run_analysis.py
docs/: ARCHITECTURE.md  ROADMAP.md
examples/: demo.py  imaging_demo.py
scripts/: build_web_assets.py  get_one_scan.py  serve.sh
src/oncotwin/: __init__.py  assimilation.py  domain.py  engine.py  explain.py  forecast.py  growth.py  imaging.py  parameters.py  store.py  validation.py
src/oncotwin/api/: main.py  schemas.py
src/oncotwin/data/: __init__.py  adapters.py  clinical.py
tests/: test_advanced.py  test_api.py  test_engine.py  test_growth.py  test_imaging.py  test_learning.py
