[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oncotwin"
version = "0.1.0"
description = "A living, probabilistic cancer patient digital twin for oncology decision support."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "OncoTwin contributors" }]
keywords = ["digital-twin", "oncology", "cancer", "forecasting", "healthcare"]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
]

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "pydantic>=2.6"]
imaging = ["scikit-image>=0.22", "nibabel>=5.0"]
demo = ["matplotlib>=3.8"]
dev = ["pytest>=8.0", "httpx>=0.27", "fastapi>=0.110", "uvicorn[standard]>=0.29", "pydantic>=2.6", "matplotlib>=3.8", "scikit-image>=0.22", "nibabel>=5.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
